* added new button for get right answer * added periodic task for added new questions and answer in db * wrapped everything in docker

--- a/templates/components/question.html
+++ b/templates/components/question.html
@@ -18,6 +18,10 @@
     </div>
 </div>
 <button type="submit" class="btn btn-primary"
-        {% if user.id in question.users %}disabled{% endif %}
->Ответить
+        {% if user.id in question.users %}disabled{% endif %}>
+        Ответить
 </button>
+<div class="btn btn-primary answer" data-id="{{ question.id }}" data-url="{% url 'right_answer' %}"
+        {% if user.id in question.users %}disabled{% endif %}>
+        Получить правильный ответ
+</div>
